--- a/docs/迷你启动器修改方案.md
+++ b/docs/迷你启动器修改方案.md
@@ -1,8 +1,10 @@
 ﻿# 迷你启动器（悬浮球 + 环形启动器）修改方案
 
-最后更新：2025-10-16
+最后更新：2025-10-17
 
 本文聚焦“迷你启动器（Mini 模式）”的交互与技术改造方案，目标是在保持现有代码结构与使用体验的前提下，做最小化改动获得稳定与体验的明显提升，并规划后续渐进增强路线。
+
+相关：总览与阶段计划请见 docs/迷你模式-讨论整理与计划.md
 
 
 一、目标与范围
@@ -31,7 +33,8 @@
   - 交互状态逻辑分散在 View 代码中，难于单测。
 
 
-三、P0 改动（本次最小交付）
+三、P0 改动（当前阶段，必须项包含“全屏透明宿主”）
+- 宿主窗口：将 Mini 模式宿主调整为“全屏透明 + 局部命中（仅球/菜单）”，默认启用；保留“传统小窗口缩放”作为回退路径（设置可切换）。
 - 统一触发路径，避免双触发：
   - 在 CircularLauncherView.Item_PointerReleased 末尾设置 e.Handled = true，防止事件冒泡到父级兜底命中检测（已完成）。
   - MiniBallWindow 的 TryTriggerItemUnderPointer 保留作为兜底策略，但应只在点击发生于非子项区域时才依赖（当前结构下已天然只绑定在“球体”元素上，不会与子项重复；如后续变更到 Window 级事件需注意 e.Handled 判断）。
@@ -122,3 +125,16 @@
 - S2（1-2 天）：实现可选的“执行后保持展开”开关、展开/收起的基础动画；
 - S3（1 周内）：抽取 MiniInteractionController，并为其与布局逻辑补最小单测；
 - S4（2 周内）：多屏/高 DPI 抛光、可访问性基础支持、插件动作整合 UX。
+
+
+
+## 附录：全屏透明宿主窗口（实现细则与参考）
+该实现已纳入 P0 必须项，细节与测试建议详见：
+
+- docs/迷你模式-全屏透明窗口可行性与设计.md
+  - 重点参考其中 FAQ：《全屏透明窗口会不会影响透明区域的操作？渲染效率如何？》
+
+要点速览：
+- 默认启用全屏透明宿主；提供设置开关回退至传统小窗口；
+- 仅球/菜单区域参与命中，其他区域点击穿透；
+- 先保证单显示器体验，后续拓展多显示器与 Alt+Tab/焦点策略。
