--- a/docs/插件开发指南.md
+++ b/docs/插件开发指南.md
@@ -1,8 +1,8 @@
 # MicroDock 插件开发指南
 
 ## 版本信息
-- **文档版本**: 3.0.0
-- **最后更新**: 2025-11-13
+- **文档版本**: 3.1.0
+- **最后更新**: 2025-11-14
 - **适用 MicroDock 版本**: 0.0.3.0+
 
 ## 目录
@@ -282,6 +282,24 @@ public class MyPlugin : BaseMicroDockPlugin
 </UserControl>
 ```
 
+**实现 IMicroTab 接口的 View 类**:
+```csharp
+// MyTabView.axaml.cs
+using Avalonia.Controls;
+using MicroDock.Plugin;
+
+public partial class MyTabView : UserControl, IMicroTab
+{
+    public string TabName => "我的标签页";
+    public IconSymbolEnum IconSymbol => IconSymbolEnum.GamesFilled;
+    
+    public MyTabView()
+    {
+        InitializeComponent();
+    }
+}
+```
+
 **更新插件类**:
 ```csharp
 public class MyPlugin : BaseMicroDockPlugin
@@ -388,22 +406,22 @@ public interface IMicroDockPlugin
 ```csharp
 public interface IMicroTab
 {
-    string TabName { get; }        // 标签页名称
-    object TabContent { get; }     // 标签页内容（通常是 UserControl）
-    IconSource TabIcon { get; }    // 标签页图标
+    /// <summary>
+    /// 页签名字
+    /// </summary>
+    string TabName { get; }
+    
+    /// <summary>
+    /// 页签图标
+    /// </summary>
+    IconSymbolEnum IconSymbol { get; }
 }
 ```
 
-### IMicroActionsProvider（操作提供者接口）
-
-提供自定义操作和命令：
-
-```csharp
-public interface IMicroActionsProvider
-{
-    IEnumerable<IAction> GetActions();  // 返回可用的操作列表
-}
-```
+**重要说明**：
+- 实现 `IMicroTab` 接口的类通常是一个 `UserControl`，该控件本身就是标签页的内容
+- `IconSymbolEnum` 提供了大量预定义的图标符号（如 `GamesFilled`、`FolderFilled`、`Settings` 等）
+- 完整的图标列表请参考 `MicroDock.Plugin.IconSymbolEnum` 枚举
 
 ---
 
@@ -694,24 +712,25 @@ public override void OnAllPluginsLoaded()
     // 等所有插件加载完成后才能安全地调用其他插件的工具
     
     // 1. 调用全局工具（调用第一个匹配的）
-    var result1 = await CallToolAsync("string.reverse", new Dictionary<string, object>
+    var result1 = await CallToolAsync("string.reverse", new Dictionary<string, string>
     {
         ["input"] = "Hello World"
     });
     
     // 2. 指定插件名调用
-    var result2 = await CallToolAsync("math.add", new Dictionary<string, object>
+    var result2 = await CallToolAsync("math.add", new Dictionary<string, string>
     {
-        ["a"] = 10,
-        ["b"] = 20
+        ["a"] = "10",
+        ["b"] = "20"
     }, pluginName: "com.microdock.test");
     
-    // 3. 复杂对象参数
+    // 3. 复杂对象参数（需要序列化为 JSON 字符串）
     var items = new List<MyDataModel> { /* ... */ };
-    var result3 = await CallToolAsync("data.filter", new Dictionary<string, object>
+    var itemsJson = System.Text.Json.JsonSerializer.Serialize(items);
+    var result3 = await CallToolAsync("data.filter", new Dictionary<string, string>
     {
-        ["items"] = items,  // 会自动序列化为 JSON
-        ["minValue"] = 10
+        ["items"] = itemsJson,  // 复杂对象需要先序列化为 JSON 字符串
+        ["minValue"] = "10"
     });
 }
 ```
@@ -753,14 +772,36 @@ public override void OnAllPluginsLoaded()
 
 ### 支持的参数类型
 
+工具方法可以接受以下类型的参数（调用时都以字符串形式传递，框架自动转换）：
+
 #### 基本类型
 ```csharp
 int, string, bool, double, float, long, decimal, byte, short, char
 ```
 
+**调用示例**：
+```csharp
+new Dictionary<string, string>
+{
+    ["age"] = "25",           // int
+    ["name"] = "John",        // string
+    ["active"] = "true",      // bool
+    ["price"] = "19.99"       // double
+}
+```
+
 #### 可空类型
 ```csharp
-int?, string?, bool?
+int?, string?, bool?, double? 等
+```
+
+**调用示例**：
+```csharp
+new Dictionary<string, string>
+{
+    ["optionalAge"] = "25",   // int? (有值)
+    ["optionalName"] = "",    // string? (空字符串表示 null)
+}
 ```
 
 #### 集合类型
@@ -768,8 +809,20 @@ int?, string?, bool?
 List<T>, Dictionary<TKey, TValue>, T[]
 ```
 
+**调用示例**：
+```csharp
+var items = new List<string> { "item1", "item2", "item3" };
+var itemsJson = System.Text.Json.JsonSerializer.Serialize(items);
+
+new Dictionary<string, string>
+{
+    ["items"] = itemsJson  // 需要序列化为 JSON
+}
+```
+
 #### 复杂类型
 任何可 JSON 序列化的类型：
+
 ```csharp
 public class MyDataModel
 {
@@ -778,23 +831,40 @@ public class MyDataModel
 }
 ```
 
+**调用示例**：
+```csharp
+var data = new MyDataModel { Name = "Test", Value = 100 };
+var dataJson = System.Text.Json.JsonSerializer.Serialize(data);
+
+new Dictionary<string, string>
+{
+    ["data"] = dataJson  // 需要序列化为 JSON
+}
+```
+
 ### 类型转换机制
 
-框架会自动处理参数类型转换：
+框架会自动处理参数类型转换。由于 `CallToolAsync` 接受 `Dictionary<string, string>` 参数，所以：
 
-1. **类型匹配**: 如果参数类型已经匹配，直接使用
-2. **基本类型转换**: 使用 `Convert.ChangeType`
-3. **复杂类型**: 通过 JSON 序列化/反序列化转换
+1. **字符串参数**: 直接传递
+2. **基本类型**: 框架会自动从字符串转换（如 `"42"` → `42`）
+3. **复杂类型**: 需要先序列化为 JSON 字符串，框架会自动反序列化
 
 ```csharp
-// 调用时：
-await CallToolAsync("tool.name", new Dictionary<string, object>
+// 调用示例：
+await CallToolAsync("tool.name", new Dictionary<string, string>
 {
-    ["intParam"] = 42,  // int -> int (直接)
-    ["stringParam"] = "hello",  // string -> string (直接)
-    ["complexParam"] = myObject  // MyObject -> JSON -> MyObject (序列化)
+    ["intParam"] = "42",              // string -> int (框架自动转换)
+    ["stringParam"] = "hello",         // string -> string (直接)
+    ["boolParam"] = "true",            // string -> bool (框架自动转换)
+    ["complexParam"] = JsonSerializer.Serialize(myObject)  // object -> JSON string -> object (框架反序列化)
 });
 ```
+
+**转换规则**：
+- 基本类型（int、bool、double 等）：框架使用 `Convert.ChangeType` 从字符串转换
+- 复杂类型（类、列表、字典等）：框架使用 JSON 反序列化
+- 可空类型：支持 `null` 字符串或空字符串
 
 ### 工具命名规范
 
@@ -1206,6 +1276,15 @@ Test/
 ---
 
 ## 版本更新日志
+
+### v3.1.0 (2025-11-14)
+- 📝 **文档更新**: 基于实际代码更新插件开发指南
+- ✅ 修正 `IMicroTab` 接口说明（`IconSymbol` 而非 `IconSource`）
+- ✅ 移除不存在的 `IMicroActionsProvider` 接口说明
+- ✅ 更正 `CallToolAsync` 参数类型（`Dictionary<string, string>` 而非 `Dictionary<string, object>`）
+- ✅ 完善类型转换机制说明（调用者需要序列化复杂对象为 JSON）
+- ✅ 添加更详细的参数类型和调用示例
+- ✅ 增加 IMicroTab 实现说明（View 类需要继承 UserControl 并实现 IMicroTab）
 
 ### v3.0.0 (2025-11-13)
 - 🚀 **重大更新**: 引入插件工具调用系统
