增加窗口位置和大小的保存

--- a/docs/插件开发指南.md
+++ b/docs/插件开发指南.md
@@ -1037,6 +1037,60 @@ catch (ToolExecutionException ex)
 - **Margin**: `0,12,12,12` (左、上、右、下)
 - **Spacing**: `8` 像素（元素间距）
 
+#### ⚠️ 窗口最小尺寸要求
+
+**MicroDock 主窗口的最小尺寸为 360×360 像素**，插件开发者应确保 UI 布局能够适配此最小尺寸。
+
+##### 布局适配建议
+
+1. **使用响应式布局**
+   - 优先使用 `Grid` 和 `*` 尺寸单位，让内容自适应可用空间
+   - 避免固定宽度的元素，使用 `MinWidth` 和 `MaxWidth` 限制范围
+
+2. **内容可滚动**
+   - 虽然主应用提供了统一的滚动支持，但插件内容应设计为在小尺寸下也能正常显示
+   - 重要内容应优先显示在可见区域内
+
+3. **控件尺寸控制**
+   ```xml
+   <!-- ✅ 推荐：使用最小/最大尺寸限制 -->
+   <TextBox MinWidth="200" MaxWidth="400"/>
+   
+   <!-- ❌ 避免：固定宽度 -->
+   <TextBox Width="400"/>
+   ```
+
+4. **布局示例**
+   ```xml
+   <UserControl>
+       <Grid RowDefinitions="Auto,*,Auto">
+           <!-- 固定高度的头部 -->
+           <StackPanel Grid.Row="0" Margin="0,12,12,12">
+               <TextBlock Text="标题" FontSize="16" FontWeight="Bold"/>
+           </StackPanel>
+           
+           <!-- 自适应高度的内容区域 -->
+           <StackPanel Grid.Row="1" Margin="0,0,12,12" Spacing="8">
+               <!-- 内容会自动适应可用空间 -->
+               <TextBox Watermark="输入内容..." MinHeight="100"/>
+               <ListBox ItemsSource="{Binding Items}" MinHeight="150"/>
+           </StackPanel>
+           
+           <!-- 固定高度的底部操作区 -->
+           <StackPanel Grid.Row="2" Orientation="Horizontal" 
+                      HorizontalAlignment="Right" Margin="0,0,12,12">
+               <Button Content="取消" Margin="0,0,8,0"/>
+               <Button Content="确定"/>
+           </StackPanel>
+       </Grid>
+   </UserControl>
+   ```
+
+5. **测试建议**
+   - 在开发时，将窗口调整为最小尺寸（360×360）测试布局效果
+   - 确保所有重要功能和内容在小尺寸下都能正常访问
+   - 检查文本是否被截断，控件是否重叠
+
 ### Avalonia 控件使用
 
 #### FluentAvaloniaUI 组件
