增加插件删除功能

--- a/docs/插件开发指南.md
+++ b/docs/插件开发指南.md
@@ -1,7 +1,7 @@
 # MicroDock 插件开发指南
 
 ## 版本信息
-- **文档版本**: 3.1.0
+- **文档版本**: 3.2.0
 - **最后更新**: 2025-11-14
 - **适用 MicroDock 版本**: 0.0.3.0+
 
@@ -12,6 +12,16 @@
 - [插件接口](#插件接口)
 - [插件工具系统](#插件工具系统) 🆕 **全新功能**
 - [UI 页签开发规范](#ui-页签开发规范)
+- [插件上下文 API](#插件上下文-api) 🆕 **新增章节**
+  - [日志系统](#-日志系统)
+  - [数据存储](#-数据存储)
+  - [设置管理](#️-设置管理)
+  - [依赖访问](#-依赖访问)
+  - [图片管理](#️-图片管理)
+  - [路径管理](#-路径管理)
+  - [通知系统](#-通知系统)
+  - [Loading 指示器](#-loading-指示器)
+  - [托盘菜单](#-托盘菜单)
 - [最佳实践](#最佳实践)
 - [常见问题](#常见问题)
 
@@ -238,26 +248,26 @@ public class MyPlugin : BaseMicroDockPlugin
     {
         base.OnInit();
         // 插件初始化逻辑
-        LogInfo("我的插件已初始化");
+        Context!.LogInfo("我的插件已初始化");
     }
 
     public override void OnEnable()
     {
         base.OnEnable();
-        LogInfo("我的插件已启用");
+        Context!.LogInfo("我的插件已启用");
     }
 
     public override void OnDisable()
     {
         base.OnDisable();
-        LogInfo("我的插件已禁用");
+        Context!.LogInfo("我的插件已禁用");
     }
 
     public override void OnDestroy()
     {
         base.OnDestroy();
         // 插件清理逻辑
-        LogInfo("我的插件正在销毁");
+        Context!.LogInfo("我的插件正在销毁");
     }
     
     // 插件标签页配置
@@ -585,7 +595,7 @@ public class MyPlugin : BaseMicroDockPlugin
     {
         // 可以访问插件实例的字段和属性
         _pluginState++;
-        LogInfo($"处理参数: {param}, 状态: {_pluginState}");
+        Context!.LogInfo($"处理参数: {param}, 状态: {_pluginState}");
         
         // 可以使用插件上下文
         var config = GetSettings("config_key");
@@ -746,10 +756,10 @@ public override void OnAllPluginsLoaded()
     var allTools = GetAvailableTools();
     foreach (var tool in allTools)
     {
-        LogInfo($"工具: {tool.Name}");
-        LogInfo($"  描述: {tool.Description}");
-        LogInfo($"  提供者: {tool.ProviderPlugin}");
-        LogInfo($"  参数: {tool.ParametersSummary}");
+        Context!.LogInfo($"工具: {tool.Name}");
+        Context!.LogInfo($"  描述: {tool.Description}");
+        Context!.LogInfo($"  提供者: {tool.ProviderPlugin}");
+        Context!.LogInfo($"  参数: {tool.ParametersSummary}");
     }
     
     // 获取指定插件的工具
@@ -759,12 +769,12 @@ public override void OnAllPluginsLoaded()
     var toolInfo = GetToolInfo("string.reverse");
     if (toolInfo != null)
     {
-        LogInfo($"返回值: {toolInfo.ReturnDescription}");
+        Context!.LogInfo($"返回值: {toolInfo.ReturnDescription}");
         foreach (var param in toolInfo.Parameters)
         {
-            LogInfo($"  参数: {param.Name} ({param.TypeName})");
-            LogInfo($"    描述: {param.Description}");
-            LogInfo($"    必需: {param.Required}");
+            Context!.LogInfo($"  参数: {param.Name} ({param.TypeName})");
+            Context!.LogInfo($"    描述: {param.Description}");
+            Context!.LogInfo($"    必需: {param.Required}");
         }
     }
 }
@@ -891,17 +901,17 @@ try
 catch (ToolNotFoundException ex)
 {
     // 工具未找到
-    LogError($"工具 {ex.ToolName} 未找到", ex);
+    Context!.LogError($"工具 {ex.ToolName} 未找到", ex);
 }
 catch (ToolParameterException ex)
 {
     // 参数错误（缺失、类型不匹配等）
-    LogError($"参数 {ex.ParameterName} 错误", ex);
+    Context!.LogError($"参数 {ex.ParameterName} 错误", ex);
 }
 catch (ToolExecutionException ex)
 {
     // 工具执行失败
-    LogError($"工具执行失败", ex);
+    Context!.LogError($"工具执行失败", ex);
 }
 ```
 
@@ -1135,6 +1145,403 @@ catch (ToolExecutionException ex)
 
 ---
 
+## 插件上下文 API
+
+### 📝 日志系统
+
+MicroDock 提供了完整的日志系统，插件可以通过 `Context` 属性访问日志方法。所有日志都会自动添加插件名称前缀，方便在日志查看器中识别和过滤。
+
+#### 日志级别
+
+插件支持四种日志级别：
+
+1. **Debug（调试）**: 详细的调试信息，通常只在开发时使用
+2. **Info（信息）**: 一般性的信息记录，用于记录正常操作流程
+3. **Warning（警告）**: 警告信息，表示可能存在问题但不影响功能
+4. **Error（错误）**: 错误信息，表示发生了错误，可以包含异常对象
+
+#### 日志方法
+
+日志方法通过 `Context` 属性访问：
+
+```csharp
+public class MyPlugin : BaseMicroDockPlugin
+{
+    public override void OnInit()
+    {
+        base.OnInit();
+        
+        // 调试日志 - 用于开发调试
+        Context!.LogDebug("插件初始化开始");
+        
+        // 信息日志 - 记录正常操作
+        Context!.LogInfo("插件已成功初始化");
+        
+        // 警告日志 - 记录潜在问题
+        if (someCondition)
+        {
+            Context!.LogWarning("检测到潜在问题，但继续执行");
+        }
+        
+        // 错误日志 - 记录错误和异常
+        try
+        {
+            // 可能抛出异常的操作
+            DoSomething();
+        }
+        catch (Exception ex)
+        {
+            Context!.LogError("操作失败", ex);  // 包含异常对象
+        }
+    }
+}
+```
+
+**注意**: `Context` 是 `public` 属性，可以直接访问。使用 `!` 空值抑制操作符是因为框架保证在插件生命周期方法中 `Context` 已初始化。
+
+#### 日志使用示例
+
+**基本使用**:
+```csharp
+// 记录信息日志
+Context!.LogInfo("用户点击了按钮");
+
+// 记录警告日志
+Context!.LogWarning("配置文件不存在，使用默认配置");
+
+// 记录错误日志（无异常）
+Context!.LogError("无法连接到服务器");
+
+// 记录错误日志（包含异常）
+try
+{
+    ProcessData();
+}
+catch (Exception ex)
+{
+    Context!.LogError("数据处理失败", ex);
+}
+```
+
+**在工具方法中使用**:
+```csharp
+[MicroTool("example.process",
+    Description = "处理数据示例",
+    ReturnDescription = "处理结果")]
+public async Task<string> ProcessData(
+    [ToolParameter("data", Description = "要处理的数据")] string data)
+{
+    Context!.LogInfo($"开始处理数据: {data}");
+    
+    try
+    {
+        // 处理逻辑
+        var result = await ProcessAsync(data);
+        Context!.LogInfo($"数据处理完成: {result}");
+        return result;
+    }
+    catch (Exception ex)
+    {
+        Context!.LogError($"数据处理失败: {data}", ex);
+        throw;  // 重新抛出异常，让框架处理
+    }
+}
+```
+
+**在异步操作中使用**:
+```csharp
+public async Task LoadDataAsync()
+{
+    Context!.LogDebug("开始加载数据");
+    
+    try
+    {
+        var data = await FetchDataFromApi();
+        Context!.LogInfo($"成功加载 {data.Count} 条记录");
+        return data;
+    }
+    catch (HttpRequestException ex)
+    {
+        Context!.LogError("网络请求失败", ex);
+        throw;
+    }
+    catch (Exception ex)
+    {
+        Context!.LogError("未知错误", ex);
+        throw;
+    }
+}
+```
+
+#### 日志查看
+
+所有插件日志都会：
+- **自动添加插件名称前缀**: 格式为 `[Plugin:插件名称]`
+- **记录到日志文件**: 可以在主应用的"日志查看器"标签页中查看
+- **支持日志级别筛选**: 在日志查看器中可以按级别过滤
+- **支持关键字搜索**: 可以搜索特定插件的日志
+
+#### 日志最佳实践
+
+1. **合理使用日志级别**:
+   - `Debug`: 仅在开发调试时使用，生产环境可能不输出
+   - `Info`: 记录重要的操作和状态变化
+   - `Warning`: 记录可能的问题，但不影响功能
+   - `Error`: 记录错误和异常，必须包含足够的上下文信息
+
+2. **提供有意义的日志消息**:
+   ```csharp
+   // ❌ 不好的日志
+   Context!.LogInfo("处理完成");
+   
+   // ✅ 好的日志
+   Context!.LogInfo($"数据处理完成，共处理 {count} 条记录，耗时 {duration}ms");
+   ```
+
+3. **在关键操作点记录日志**:
+   ```csharp
+   public override void OnInit()
+   {
+       Context!.LogInfo("插件初始化开始");
+       // ... 初始化逻辑 ...
+       Context!.LogInfo("插件初始化完成");
+   }
+   
+   public override void OnDestroy()
+   {
+       Context!.LogInfo("插件开始销毁");
+       // ... 清理逻辑 ...
+       Context!.LogInfo("插件销毁完成");
+   }
+   ```
+
+4. **错误日志应包含异常对象**:
+   ```csharp
+   // ✅ 正确：包含异常对象
+   catch (Exception ex)
+   {
+       Context!.LogError("操作失败", ex);
+   }
+   
+   // ⚠️ 不推荐：只记录消息
+   catch (Exception ex)
+   {
+       Context!.LogError($"操作失败: {ex.Message}");
+   }
+   ```
+
+5. **避免在循环中记录过多日志**:
+   ```csharp
+   // ❌ 不推荐：在循环中记录每条记录
+   foreach (var item in items)
+   {
+       Context!.LogInfo($"处理项: {item}");  // 可能产生大量日志
+   }
+   
+   // ✅ 推荐：记录汇总信息
+   Context!.LogInfo($"开始处理 {items.Count} 项");
+   foreach (var item in items)
+   {
+       ProcessItem(item);
+   }
+   Context!.LogInfo($"处理完成，共处理 {items.Count} 项");
+   ```
+
+### 💾 数据存储
+
+插件可以使用键值存储 API 来保存和读取数据：
+
+```csharp
+// 保存数据
+SetValue("user_preference", "dark_mode");
+
+// 读取数据
+var preference = GetValue("user_preference");
+
+// 删除数据
+DeleteValue("user_preference");
+
+// 获取所有键
+var allKeys = GetAllKeys();
+```
+
+**使用场景**:
+- 保存用户偏好设置
+- 缓存临时数据
+- 存储插件状态
+
+### ⚙️ 设置管理
+
+插件可以使用设置 API 来管理配置，这些设置会在主应用的设置界面中显示：
+
+```csharp
+// 设置配置（带描述）
+SetSettings("api_key", "your-api-key", "API 密钥，用于访问外部服务");
+
+// 读取配置
+var apiKey = GetSettings("api_key");
+
+// 删除配置
+DeleteSettings("api_key");
+
+// 获取所有配置键
+var settingsKeys = GetAllSettingsKeys();
+```
+
+**与键值存储的区别**:
+- **设置 (Settings)**: 用于用户可配置的选项，会在设置界面显示
+- **键值存储 (Values)**: 用于内部数据存储，不在设置界面显示
+
+### 🔗 依赖访问
+
+如果插件声明了依赖关系，可以访问依赖插件的设置和键值（只读）：
+
+```csharp
+// 从依赖插件读取键值
+var value = GetValueFromDependency("com.other.plugin", "shared_data");
+
+// 从依赖插件读取设置
+var setting = GetSettingsFromDependency("com.other.plugin", "api_url");
+
+// 获取依赖插件的所有键
+var keys = GetKeysFromDependency("com.other.plugin");
+```
+
+**注意事项**:
+- 只能读取，不能修改依赖插件的数据
+- 需要先在 `plugin.json` 中声明依赖关系
+- 建议在 `OnAllPluginsLoaded()` 中访问，确保依赖插件已加载
+
+### 🖼️ 图片管理
+
+插件可以保存和加载图片数据：
+
+```csharp
+// 保存图片
+byte[] imageData = File.ReadAllBytes("icon.png");
+SaveImage("my_icon", imageData);
+
+// 加载图片
+byte[]? loadedImage = LoadImage("my_icon");
+
+// 删除图片
+DeleteImage("my_icon");
+```
+
+**使用场景**:
+- 缓存网络图片
+- 保存用户上传的图片
+- 存储插件图标
+
+### 📁 路径管理
+
+插件可以获取专用的目录路径：
+
+```csharp
+// 获取插件配置目录
+string configPath = GetConfigPath();
+// 例如: C:\Users\...\Plugins\MyPlugin\Config
+
+// 获取插件数据目录
+string dataPath = GetPluginDataPath();
+// 例如: C:\Users\...\Plugins\MyPlugin\Data
+```
+
+**目录结构**:
+```
+Plugins/
+└── MyPlugin/
+    ├── Config/      # 配置目录（GetConfigPath()）
+    ├── Data/        # 数据目录（GetPluginDataPath()）
+    └── MyPlugin.dll
+```
+
+### 🔔 通知系统
+
+插件可以显示应用内通知和系统托盘通知：
+
+```csharp
+// 应用内通知（窗口内 Toast）
+Context!.ShowInAppNotification("操作完成", "数据已成功保存", NotificationType.Success);
+
+// 系统托盘通知
+Context!.ShowSystemNotification("新消息", "您有一条新消息", new Dictionary<string, string>
+{
+    ["查看"] = "view_message",
+    ["忽略"] = "ignore_message"
+});
+```
+
+**注意**: 通知 API 需要通过 `Context` 属性访问（`Context` 是 `public` 的，可以直接访问）。
+
+**通知类型**:
+- `NotificationType.Information` - 信息通知
+- `NotificationType.Success` - 成功通知
+- `NotificationType.Warning` - 警告通知
+- `NotificationType.Error` - 错误通知
+
+### ⏳ Loading 指示器
+
+插件可以显示全屏 Loading 指示器：
+
+```csharp
+// 显示 Loading（带消息）
+Context!.ShowLoading("正在加载数据...");
+
+try
+{
+    await LoadDataAsync();
+}
+finally
+{
+    // 确保隐藏 Loading
+    Context!.HideLoading();
+}
+```
+
+**注意**: Loading API 需要通过 `Context` 属性访问。
+
+**使用建议**:
+- 用于长时间运行的操作（> 1秒）
+- 必须在 `finally` 块中调用 `HideLoading()`，确保总是隐藏
+- 避免嵌套使用
+
+### 🎯 托盘菜单
+
+插件可以添加系统托盘菜单项：
+
+```csharp
+public override void OnInit()
+{
+    base.OnInit();
+    
+    // 添加菜单项
+    Context!.AddTrayMenuItem("myplugin_action", "执行操作", () =>
+    {
+        Context!.LogInfo("用户点击了托盘菜单项");
+        DoSomething();
+    });
+    
+    // 添加分隔符
+    Context!.AddTrayMenuSeparator("myplugin_separator");
+}
+
+public override void OnDestroy()
+{
+    // 清理时移除菜单项
+    Context!.RemoveTrayMenuItem("myplugin_action");
+    Context!.RemoveTrayMenuItem("myplugin_separator");
+    base.OnDestroy();
+}
+```
+
+**注意事项**:
+- 菜单项 ID 必须唯一（建议使用插件名前缀）
+- 在 `OnDestroy()` 中清理添加的菜单项
+- 分隔符也需要通过 `RemoveTrayMenuItem()` 移除
+
+---
+
 ## 最佳实践
 
 ### 1. 资源管理
@@ -1306,6 +1713,55 @@ public class MyPlugin : BaseMicroDockPlugin, IMicroTab
 
 **A**: 如果您需要在特定区域（如列表、文本框）实现独立滚动，可以在该区域使用 ScrollViewer。请参考 [UI 页签开发规范](#ui-页签开发规范) 中的"局部滚动区域"示例。
 
+### Q: 插件如何记录日志？
+
+**A**: 插件可以通过 `Context` 属性访问日志方法：
+
+```csharp
+public class MyPlugin : BaseMicroDockPlugin
+{
+    public override void OnInit()
+    {
+        Context!.LogDebug("调试信息");
+        Context!.LogInfo("一般信息");
+        Context!.LogWarning("警告信息");
+        Context!.LogError("错误信息", exception);  // 可以包含异常对象
+    }
+}
+```
+
+所有日志都会自动添加插件名称前缀，可以在主应用的"日志查看器"标签页中查看。详细说明请参考 [插件上下文 API - 日志系统](#-日志系统)。
+
+### Q: 插件如何保存和读取数据？
+
+**A**: 插件可以使用键值存储 API 或设置 API：
+
+```csharp
+// 键值存储（内部数据）
+SetValue("key", "value");
+var value = GetValue("key");
+
+// 设置（用户可配置，会在设置界面显示）
+SetSettings("api_key", "value", "描述");
+var setting = GetSettings("api_key");
+```
+
+详细说明请参考 [插件上下文 API](#插件上下文-api) 章节。
+
+### Q: 插件如何显示通知？
+
+**A**: 插件可以通过上下文 API 显示通知：
+
+```csharp
+// 应用内通知
+Context!.ShowInAppNotification("标题", "消息", NotificationType.Success);
+
+// 系统托盘通知
+Context!.ShowSystemNotification("标题", "消息");
+```
+
+注意：通知 API 需要通过 `Context` 属性访问（`Context` 是 `public` 的），而不是基类的便捷方法。
+
 ---
 
 ## 示例插件
@@ -1330,6 +1786,16 @@ Test/
 ---
 
 ## 版本更新日志
+
+### v3.2.0 (2025-11-14)
+- 📝 **新增**: 添加完整的插件上下文 API 文档
+- ✨ **新增**: 详细的日志系统使用说明和最佳实践
+- ✨ **新增**: 数据存储、设置管理、依赖访问等 API 说明
+- ✨ **新增**: 图片管理、路径管理、通知系统等 API 说明
+- ✨ **新增**: Loading 指示器和托盘菜单 API 说明
+- 📝 **完善**: 添加日志相关的常见问题解答
+- 📝 **完善**: 更新常见问题，添加数据存储和通知相关问题
+- ✅ **修正**: 所有日志示例统一使用 `Context!.LogXXX` 方式访问
 
 ### v3.1.0 (2025-11-14)
 - 📝 **文档更新**: 基于实际代码更新插件开发指南
