提交一版乱七八糟的东西

--- a/docs/插件开发指南.md
+++ b/docs/插件开发指南.md
@@ -1447,6 +1447,90 @@ string dataPath = GetPluginDataPath();
 // 例如: C:\Users\...\Plugins\MyPlugin\Data
 ```
 
+#### ⚠️ 重要：Config 和 Data 目录的区别
+
+在插件开发中，Config 和 Data 目录有不同的用途和生命周期：
+
+##### Config 目录 - 插件配置（随版本更新）
+
+- **用途**: 存储插件自身的配置文件、默认设置、预设模板等
+- **特点**: 
+  - 随插件版本更新而更新
+  - **插件更新时会被删除并替换为新版本的 Config**
+  - 不应存储用户个性化数据
+- **示例**:
+  - 插件的默认配置模板
+  - 预设的工作流配置
+  - 插件内置的资源文件引用
+
+```csharp
+// ❌ 错误：不要在 Config 中存储用户数据
+string userPreference = File.ReadAllText(Path.Combine(Context.ConfigPath, "user_settings.json"));
+
+// ✅ 正确：Config 用于插件默认配置
+string defaultTemplate = File.ReadAllText(Path.Combine(Context.ConfigPath, "default_template.json"));
+```
+
+##### Data 目录 - 用户数据（永久保留）
+
+- **用途**: 存储用户创建、编辑的数据和个性化设置
+- **特点**:
+  - **插件更新时会被保留**
+  - 存储用户的个性化数据
+  - 跨版本持久化
+- **示例**:
+  - 用户创建的项目文件
+  - 用户的个性化设置
+  - 用户上传的资源文件
+  - 应用状态和历史记录
+
+```csharp
+// ✅ 正确：用户数据存储在 Data 目录
+string userProjects = Path.Combine(Context.DataPath, "projects");
+Directory.CreateDirectory(userProjects);
+File.WriteAllText(Path.Combine(userProjects, "my_project.json"), projectData);
+```
+
+##### 最佳实践
+
+1. **明确数据归属**：
+   - 插件自带的 → Config
+   - 用户创建的 → Data
+
+2. **版本兼容性**：
+   ```csharp
+   // Data 目录中的数据可能来自旧版本，需要做兼容处理
+   public override void OnInit()
+   {
+       MigrateUserDataIfNeeded(); // 检查并升级旧版本数据格式
+   }
+   
+   private void MigrateUserDataIfNeeded()
+   {
+       // 检查数据版本
+       var dataVersion = GetValue("data_version") ?? "1.0.0";
+       
+       if (Version.Parse(dataVersion) < Version.Parse("2.0.0"))
+       {
+           // 升级旧版本数据格式
+           MigrateFrom1To2();
+           SetValue("data_version", "2.0.0");
+       }
+   }
+   ```
+
+3. **使用数据库优先**：
+   - 简单的键值对 → 使用 `Context.SetValue()` / `GetValue()`
+   - 结构化数据 → 使用 `Context.SetSettings()` / `GetSettings()`
+   - 大文件/二进制 → 使用 Data 目录
+
+4. **文档说明**：
+
+在插件的 README 中说明：
+- Config 目录的内容和用途
+- Data 目录会存储哪些用户数据
+- 数据迁移和备份建议
+
 **目录结构**:
 ```
 Plugins/
