提交一版可用的服务器

--- a/docs/插件开发指南.md
+++ b/docs/插件开发指南.md
@@ -1,9 +1,9 @@
 # MicroDock 插件开发指南
 
 ## 版本信息
-- **文档版本**: 3.2.0
-- **最后更新**: 2025-11-14
-- **适用 MicroDock 版本**: 0.0.3.0+
+- **文档版本**: 3.3.0
+- **最后更新**: 2025-11-27
+- **适用 MicroDock 版本**: 0.0.4.0+
 
 ## 目录
 - [概述](#概述)
@@ -14,14 +14,12 @@
 - [UI 页签开发规范](#ui-页签开发规范)
 - [插件上下文 API](#插件上下文-api) 🆕 **新增章节**
   - [日志系统](#-日志系统)
-  - [数据存储](#-数据存储)
-  - [设置管理](#️-设置管理)
-  - [依赖访问](#-依赖访问)
   - [图片管理](#️-图片管理)
   - [路径管理](#-路径管理)
   - [通知系统](#-通知系统)
   - [Loading 指示器](#-loading-指示器)
   - [托盘菜单](#-托盘菜单)
+  - [通过工具共享配置](#-通过工具共享配置)
 - [最佳实践](#最佳实践)
 - [常见问题](#常见问题)
 
@@ -1346,71 +1344,6 @@ public async Task LoadDataAsync()
    Context!.LogInfo($"处理完成，共处理 {items.Count} 项");
    ```
 
-### 💾 数据存储
-
-插件可以使用键值存储 API 来保存和读取数据：
-
-```csharp
-// 保存数据
-SetValue("user_preference", "dark_mode");
-
-// 读取数据
-var preference = GetValue("user_preference");
-
-// 删除数据
-DeleteValue("user_preference");
-
-// 获取所有键
-var allKeys = GetAllKeys();
-```
-
-**使用场景**:
-- 保存用户偏好设置
-- 缓存临时数据
-- 存储插件状态
-
-### ⚙️ 设置管理
-
-插件可以使用设置 API 来管理配置，这些设置会在主应用的设置界面中显示：
-
-```csharp
-// 设置配置（带描述）
-SetSettings("api_key", "your-api-key", "API 密钥，用于访问外部服务");
-
-// 读取配置
-var apiKey = GetSettings("api_key");
-
-// 删除配置
-DeleteSettings("api_key");
-
-// 获取所有配置键
-var settingsKeys = GetAllSettingsKeys();
-```
-
-**与键值存储的区别**:
-- **设置 (Settings)**: 用于用户可配置的选项，会在设置界面显示
-- **键值存储 (Values)**: 用于内部数据存储，不在设置界面显示
-
-### 🔗 依赖访问
-
-如果插件声明了依赖关系，可以访问依赖插件的设置和键值（只读）：
-
-```csharp
-// 从依赖插件读取键值
-var value = GetValueFromDependency("com.other.plugin", "shared_data");
-
-// 从依赖插件读取设置
-var setting = GetSettingsFromDependency("com.other.plugin", "api_url");
-
-// 获取依赖插件的所有键
-var keys = GetKeysFromDependency("com.other.plugin");
-```
-
-**注意事项**:
-- 只能读取，不能修改依赖插件的数据
-- 需要先在 `plugin.json` 中声明依赖关系
-- 建议在 `OnAllPluginsLoaded()` 中访问，确保依赖插件已加载
-
 ### 🖼️ 图片管理
 
 插件可以保存和加载图片数据：
@@ -1542,11 +1475,43 @@ File.WriteAllBytes(Path.Combine(cacheDir, "thumbnail.png"), thumbnailBytes);// .
    - 不要存储用户手动创建或编辑的内容
    - 定期清理过期的缓存文件
 
-4. **使用数据库优先**：
-   - 简单的键值对 → 使用 `Context.SetValue()` / `GetValue()`
-   - 结构化数据 → 使用 `Context.SetSettings()` / `GetSettings()`
+4. **使用文件存储数据**：
+   - 简单的配置 → 使用 JSON 文件存储在 Data 目录
+   - 结构化数据 → 使用 JSON/SQLite 存储在 Data 目录
    - 大文件/二进制 → 使用 Data 目录
    - 临时数据 → 使用 TempData 目录
+
+**示例：使用 JSON 文件存储配置**:
+
+```csharp
+// 配置类
+public class MyPluginConfig
+{
+    public string ApiKey { get; set; } = "";
+    public string BaseUrl { get; set; } = "https://api.example.com";
+    public int MaxRetries { get; set; } = 3;
+}
+
+// 加载配置
+private MyPluginConfig LoadConfig()
+{
+    string configFile = Path.Combine(Context!.DataPath, "config.json");
+    if (File.Exists(configFile))
+    {
+        string json = File.ReadAllText(configFile);
+        return JsonSerializer.Deserialize<MyPluginConfig>(json) ?? new MyPluginConfig();
+    }
+    return new MyPluginConfig();
+}
+
+// 保存配置
+private void SaveConfig(MyPluginConfig config)
+{
+    string configFile = Path.Combine(Context!.DataPath, "config.json");
+    string json = JsonSerializer.Serialize(config, new JsonSerializerOptions { WriteIndented = true });
+    File.WriteAllText(configFile, json);
+}
+```
 
 5. **文档说明**：
 
@@ -1651,6 +1616,67 @@ public override void OnDestroy()
 - 菜单项 ID 必须唯一（建议使用插件名前缀）
 - 在 `OnDestroy()` 中清理添加的菜单项
 - 分隔符也需要通过 `RemoveTrayMenuItem()` 移除
+
+### 🔄 通过工具共享配置
+
+如果某个插件需要让其他插件访问自己的配置，可以通过定义工具（Tool）的方式暴露：
+
+**插件 A：暴露配置工具**
+
+```csharp
+/// <summary>
+/// 获取配置信息（供其他插件调用）
+/// </summary>
+[MicroTool("myconfig.get",
+    Description = "获取插件配置信息",
+    ReturnDescription = "配置信息的 JSON 字符串")]
+public async Task<string> GetConfigTool()
+{
+    await Task.CompletedTask;
+    
+    // 只暴露非敏感信息
+    return JsonSerializer.Serialize(new
+    {
+        baseUrl = _config.BaseUrl,
+        model = _config.Model,
+        maxRetries = _config.MaxRetries,
+        // 注意：不暴露敏感信息如 API Key
+        hasApiKey = !string.IsNullOrEmpty(_config.ApiKey)
+    });
+}
+```
+
+**插件 B：调用其他插件的配置工具**
+
+```csharp
+public override void OnAllPluginsLoaded()
+{
+    base.OnAllPluginsLoaded();
+    
+    // 在所有插件加载完成后调用其他插件的工具
+    Task.Run(async () =>
+    {
+        try
+        {
+            string configJson = await CallToolAsync("myconfig.get", 
+                new Dictionary<string, string>(), 
+                pluginName: "com.example.myplugin");
+            
+            var config = JsonSerializer.Deserialize<MyConfigResponse>(configJson);
+            Context!.LogInfo($"获取到其他插件配置: BaseUrl={config?.baseUrl}");
+        }
+        catch (Exception ex)
+        {
+            Context!.LogError("获取配置失败", ex);
+        }
+    });
+}
+```
+
+**优点**:
+- **安全可控**: 插件可以精细控制哪些配置可以对外暴露
+- **解耦设计**: 插件之间通过标准化的工具调用通信
+- **灵活性**: 可以返回任意格式的数据，支持复杂的查询逻辑
 
 ---
 
@@ -1846,19 +1872,43 @@ public class MyPlugin : BaseMicroDockPlugin
 
 ### Q: 插件如何保存和读取数据？
 
-**A**: 插件可以使用键值存储 API 或设置 API：
+**A**: 插件应该使用文件系统来存储数据。推荐使用 JSON 格式保存配置和数据：
 
 ```csharp
-// 键值存储（内部数据）
-SetValue("key", "value");
-var value = GetValue("key");
+// 保存配置到 Data 目录
+string configFile = Path.Combine(Context!.DataPath, "config.json");
+string json = JsonSerializer.Serialize(myConfig, new JsonSerializerOptions { WriteIndented = true });
+File.WriteAllText(configFile, json);
 
-// 设置（用户可配置，会在设置界面显示）
-SetSettings("api_key", "value", "描述");
-var setting = GetSettings("api_key");
+// 读取配置
+if (File.Exists(configFile))
+{
+    string json = File.ReadAllText(configFile);
+    var config = JsonSerializer.Deserialize<MyConfig>(json);
+}
 ```
 
-详细说明请参考 [插件上下文 API](#插件上下文-api) 章节。
+**目录选择**:
+- `Context.DataPath`: 用户数据，会备份
+- `Context.TempDataPath`: 临时缓存，不备份
+- `Context.ConfigPath`: 插件默认配置，随插件更新覆盖
+
+详细说明请参考 [插件上下文 API - 路径管理](#-路径管理) 章节。
+
+### Q: 如何让其他插件访问我的配置？
+
+**A**: 通过定义工具（Tool）暴露配置：
+
+```csharp
+[MicroTool("myconfig.get", Description = "获取配置")]
+public async Task<string> GetConfigTool()
+{
+    await Task.CompletedTask;
+    return JsonSerializer.Serialize(new { baseUrl = _config.BaseUrl });
+}
+```
+
+其他插件可以通过 `CallToolAsync` 调用获取配置。详见 [通过工具共享配置](#-通过工具共享配置)。
 
 ### Q: 插件如何显示通知？
 
@@ -1899,10 +1949,19 @@ Test/
 
 ## 版本更新日志
 
+### v3.3.0 (2025-11-27)
+- 🚀 **重大更新**: 移除插件数据存储 API，插件改为自行管理数据
+- ❌ **移除**: `SetValue`/`GetValue` 键值存储 API
+- ❌ **移除**: `SetSettings`/`GetSettings` 设置管理 API
+- ❌ **移除**: `GetValueFromDependency`/`GetSettingsFromDependency` 依赖访问 API
+- ✨ **新增**: 通过工具共享配置的示例说明
+- 📝 **更新**: 路径管理章节，添加使用 JSON 文件存储配置的示例
+- 📝 **更新**: 常见问题，更新数据存储相关说明
+- ⚠️ **破坏性变更**: 使用了旧 API 的插件需要迁移到文件系统存储
+
 ### v3.2.0 (2025-11-14)
 - 📝 **新增**: 添加完整的插件上下文 API 文档
 - ✨ **新增**: 详细的日志系统使用说明和最佳实践
-- ✨ **新增**: 数据存储、设置管理、依赖访问等 API 说明
 - ✨ **新增**: 图片管理、路径管理、通知系统等 API 说明
 - ✨ **新增**: Loading 指示器和托盘菜单 API 说明
 - 📝 **完善**: 添加日志相关的常见问题解答
